--- a/package.json
+++ b/package.json
@@ -1,27 +1,54 @@
 {
-  "name": "simplifinance",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "expo": "~44.0.0",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
-  },
-  "private": true
+	"name": "simplifinance",
+	"version": "1.0.0",
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"eject": "expo eject",
+		"test": "jest"
+	},
+	"jest": {
+		"preset": "jest-expo"
+	},
+	"dependencies": {
+		"@expo/vector-icons": "^12.0.0",
+		"@react-native-async-storage/async-storage": "~1.15.0",
+		"@react-native-community/datetimepicker": "^5.1.0",
+		"@react-native-picker/picker": "^2.2.1",
+		"@react-navigation/material-top-tabs": "^6.1.0",
+		"@react-navigation/native": "^6.0.7",
+		"@react-navigation/stack": "^6.1.0",
+		"add": "^2.0.6",
+		"expo": "~44.0.0",
+		"expo-status-bar": "~1.2.0",
+		"intl": "^1.2.5",
+		"jest-expo": "^44.0.1",
+		"react": "17.0.1",
+		"react-dom": "17.0.1",
+		"react-native": "0.64.3",
+		"react-native-chart-kit": "^6.11.0",
+		"react-native-dialog": "^9.2.0",
+		"react-native-gesture-handler": "~2.1.0",
+		"react-native-pager-view": "5.4.9",
+		"react-native-reanimated": "~2.3.1",
+		"react-native-safe-area-context": "3.3.2",
+		"react-native-svg": "^12.1.1",
+		"react-native-tab-view": "^3.1.1",
+		"react-native-ui-lib": "^6.8.1",
+		"react-native-uuid": "^2.0.1",
+		"react-native-web": "0.17.1",
+		"yarn": "^1.22.17"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.9",
+		"@types/jest": "^27.4.0",
+		"@types/react": "~17.0.21",
+		"@types/react-native": "~0.64.12",
+		"jest": "^27.4.7",
+		"typescript": "~4.3.5"
+	},
+	"private": true
 }
