--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"add": "^2.0.6",
 		"expo": "~44.0.0",
 		"expo-status-bar": "~1.2.0",
+		"expo-updates": "~0.11.6",
 		"intl": "^1.2.5",
 		"jest-expo": "^44.0.1",
 		"react": "17.0.1",
@@ -39,8 +40,7 @@
 		"react-native-tab-view": "^3.1.1",
 		"react-native-ui-lib": "^6.8.1",
 		"react-native-uuid": "^2.0.1",
-		"react-native-web": "0.17.1",
-		"yarn": "^1.22.17"
+		"react-native-web": "0.17.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9",
@@ -50,5 +50,6 @@
 		"jest": "^27.4.7",
 		"typescript": "~4.3.5"
 	},
-	"private": true
+	"private": true,
+	"packageManager": "yarn@3.2.0"
 }
