--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,6 +16,6 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 16.x
-        cache: 'yarn'
-    - run: yarn install --frozen-lockfile
-    - run: yarn test
+        cache: 'npm'
+    - run: npm install
+    - run: npm run test
