--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 	"dependencies": {
 		"@expo/vector-icons": "^12.0.0",
 		"@react-native-async-storage/async-storage": "~1.15.0",
-		"@react-native-community/datetimepicker": "^5.1.0",
-		"@react-native-picker/picker": "^2.2.1",
+		"@react-native-community/datetimepicker": "4.0.0",
+		"@react-native-picker/picker": "2.2.1",
 		"@react-navigation/material-top-tabs": "^6.1.0",
 		"@react-navigation/native": "^6.0.7",
 		"@react-navigation/stack": "^6.1.0",
@@ -36,7 +36,7 @@
 		"react-native-pager-view": "5.4.9",
 		"react-native-reanimated": "~2.3.1",
 		"react-native-safe-area-context": "3.3.2",
-		"react-native-svg": "^12.1.1",
+		"react-native-svg": "12.1.1",
 		"react-native-tab-view": "^3.1.1",
 		"react-native-ui-lib": "^6.8.1",
 		"react-native-uuid": "^2.0.1",
