--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 		"@expo/vector-icons": "^12.0.0",
 		"@react-native-async-storage/async-storage": "~1.15.0",
 		"@react-native-community/datetimepicker": "4.0.0",
+		"@react-native-community/masked-view": "^0.1.11",
 		"@react-native-picker/picker": "2.2.1",
 		"@react-navigation/material-top-tabs": "^6.1.0",
 		"@react-navigation/native": "^6.0.7",
 		"@react-navigation/stack": "^6.1.0",
 		"add": "^2.0.6",
-		"expo": "~44.0.0",
+		"expo": "^44.0.6",
+		"expo-dev-client": "~0.8.4",
 		"expo-status-bar": "~1.2.0",
 		"expo-updates": "~0.11.6",
 		"intl": "^1.2.5",
@@ -36,6 +38,7 @@
 		"react-native-pager-view": "5.4.9",
 		"react-native-reanimated": "~2.3.1",
 		"react-native-safe-area-context": "3.3.2",
+		"react-native-screens": "^3.13.1",
 		"react-native-svg": "12.1.1",
 		"react-native-tab-view": "^3.1.1",
 		"react-native-ui-lib": "^6.8.1",
@@ -47,7 +50,12 @@
 		"@types/jest": "^27.4.0",
 		"@types/react": "~17.0.21",
 		"@types/react-native": "~0.64.12",
+		"detox": "^19.6.5",
+		"detox-expo-helpers": "^0.6.0",
+		"expo-detox-hook": "^1.0.10",
 		"jest": "^26.6.3",
+		"react-native-testing-library": "^6.0.0",
+		"react-test-renderer": "^18.0.0",
 		"typescript": "~4.3.5"
 	},
 	"private": true,
