--- a/eas.json
+++ b/eas.json
@@ -1,18 +1,30 @@
 {
-  "cli": {
-    "version": ">= 0.47.0"
-  },
-  "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal"
-    },
-    "preview": {
-      "distribution": "internal"
-    },
-    "production": {}
-  },
-  "submit": {
-    "production": {}
-  }
+	"cli": {
+		"version": ">= 0.47.0"
+	},
+	"build": {
+		"development": {
+			"developmentClient": true,
+			"distribution": "internal"
+		},
+		"preview": {
+			"distribution": "internal"
+		},
+		"production": {},
+		"simulator": {
+			"ios": {
+				"simulator": true,
+				"developmentClient": false
+			}
+		},
+		"simdev": {
+			"ios": {
+				"simulator": true,
+				"developmentClient": true
+			}
+		}
+	},
+	"submit": {
+		"production": {}
+	}
 }
