--- a/package.json
+++ b/package.json
@@ -51,11 +51,10 @@
 		"@types/react": "~17.0.21",
 		"@types/react-native": "~0.64.12",
 		"detox": "^19.6.5",
-		"detox-expo-helpers": "^0.6.0",
+		"detox-expo-helpers": "github:fschoenfeldt/detox-expo-helpers#0.7.1",
 		"expo-detox-hook": "^1.0.10",
 		"jest": "^26.6.3",
-		"react-native-testing-library": "^6.0.0",
-		"react-test-renderer": "^18.0.0",
+		"jest-circus": "^27.5.1",
 		"typescript": "~4.3.5"
 	},
 	"private": true,
